@@ -1,7 +1,7 @@
 module ActiveResource
   module VERSION #:nodoc:
     MAJOR = 0
-    MINOR = 5
+    MINOR = 9
     TINY  = 0
 
     STRING = [MAJOR, MINOR, TINY].join('.')
