@@ -313,7 +313,7 @@ spec = Gem::Specification.new do |s|
   s.add_dependency('activerecord',     '= 1.15.3' + PKG_BUILD)
   s.add_dependency('actionpack',       '= 1.13.3' + PKG_BUILD)
   s.add_dependency('actionmailer',     '= 1.3.3' + PKG_BUILD)
-  s.add_dependency('actionwebservice', '= 1.2.3' + PKG_BUILD)
+  s.add_dependency('actionresource',   '= 0.9.0' + PKG_BUILD)
 
   s.rdoc_options << '--exclude' << '.'
   s.has_rdoc = false
